--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,10 @@ body {
   text-align: center;
   display: flex;
   justify-content: center;
-  background-color: rgb(196, 196, 196);
+  /* background-color: rgb(196, 196, 196); */
+  background-image: url("/src/assets/יום-הזיכרון-לחללי-צהל.png");
+  background-size: cover;
+  background-position: center;
 }
 
 .root {
@@ -33,16 +36,22 @@ body {
   font-size: 3rem;
   font-weight: 500;
   margin-bottom: 1rem;
+  color: white;
 }
 
 .about {
   font-size: 1.3rem;
   line-height: 1.5rem;
   margin-bottom: 1.5rem;
+  color: white;
 }
 
 h2 {
   font-weight: 600;
+}
+
+.searchPage {
+  color: white;
 }
 
 input {
@@ -165,6 +174,7 @@ input {
   font-family: "Noto Sans Hebrew", sans-serif;
   font-size: 1rem;
   cursor: pointer;
+  color: white;
 }
 
 .howItStartedButton button:hover {
@@ -180,7 +190,7 @@ input {
 
 .howItStartedContainer {
   width: 80%;
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.7);
   display: flex;
   flex-direction: column;
   padding: 1rem;
