--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,11 +20,22 @@ body {
   text-align: center;
   display: flex;
   justify-content: center;
-  background-image: url("/src/assets/backgroundImg.jpg");
+  /* background-image: url("/src/assets/backgroundImg.jpg");
   background-repeat: repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-position: center;
+  background-position: center; */
+  /* background: #2c3e50; /* fallback for old browsers */
+  /* background: -webkit-linear-gradient(to right, #3498db, #2c3e50);
+  background: linear-gradient(to right, #3498db, #2c3e50); */
+  /* background: rgb(0, 140, 210);
+  background: linear-gradient(
+    158deg,
+    rgb(0, 87, 131) 0%,
+    rgba(45, 135, 235, 1) 48%,
+    rgb(0, 73, 119) 100%
+  ); */
+  /* background-attachment: fixed; */
 }
 
 .root {
@@ -43,13 +54,30 @@ body {
   color: white;
 }
 
+.fixed-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  min-height: 100vh;
+  background: rgb(0, 140, 210);
+  background: linear-gradient(
+    158deg,
+    rgb(0, 87, 131) 0%,
+    rgba(45, 135, 235, 1) 48%,
+    rgb(0, 73, 119) 100%
+  );
+  z-index: -1;
+}
+
 .about {
   font-size: 1.6rem;
-  line-height: 1.5rem;
+  line-height: 2rem;
   margin-bottom: 1rem;
   color: white;
   /* background-color: rgba(0, 0, 0, 0.5); */
-  text-shadow: 0 0 6px rgba(0, 0, 0, 1);
+  /* text-shadow: 0 0 6px rgba(0, 0, 0, 1); */
   border-radius: 1rem;
   padding: 1rem;
 }
