--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100..900&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 * {
@@ -310,6 +309,49 @@ input {
   cursor: default;
 }
 
+.partnersContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  width: 80%;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.logos {
+  display: flex;
+  column-gap: 1rem;
+  row-gap: 2rem;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.logos img {
+  width: 7rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 1rem;
+  padding: 0.2rem;
+  cursor: pointer;
+}
+
+.partnerCard h3 {
+  margin-bottom: 2rem;
+  color: rgb(255, 166, 0);
+}
+
+img.selectedPartnerLogo {
+  box-shadow: 0 0 10px 3px orange;
+  border-radius: 0.5rem;
+  transition: box-shadow 0.3s ease;
+}
+
 @media (max-width: 480px) {
   html {
     font-size: 13px;
@@ -328,7 +370,6 @@ input {
     font-size: 1rem;
   }
   .contentImageLeft img {
-    /* width: 11rem; */
     width: 120%;
   }
   .contentImage.first {
