--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,11 +45,6 @@ body {
   background-image: url("../assets/backgroundImg.png");
   background-size: cover;
   background-position: center;
-  /* background-image: radial-gradient(
-    circle farthest-corner at 10% 20%,
-    rgba(38, 51, 97, 1) 0%,
-    rgba(65, 143, 222, 1) 79%
-  ); */
   z-index: -1;
 }
 
@@ -75,7 +70,7 @@ input {
   background-color: #eef0ff;
   margin-top: 0.7rem;
   border: 1px solid transparent;
-  border-radius: 12px;
+  border-radius: 10px;
   min-height: 1.7rem;
   min-width: 15rem;
   direction: rtl;
@@ -104,7 +99,7 @@ input {
   margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 7.7px 3px #00000040;
   border-radius: 1rem;
   background-color: white;
 }
@@ -342,8 +337,8 @@ input {
 
 .logos img {
   width: 5rem;
-  box-shadow: 0 15px 8px rgba(0, 0, 0, 0.2);
-  border-radius: 1rem;
+  box-shadow: 0px 4px 6.3px 1px #4c65b885;
+  border-radius: 15px;
   padding: 0.2rem;
   cursor: pointer;
 }
@@ -354,11 +349,11 @@ input {
 
 .partnerCard h3 {
   margin-bottom: 2rem;
-  color: rgb(255, 166, 0);
+  color: #ff8500;
 }
 
 img.selectedPartnerLogo {
-  box-shadow: 0 0 10px 3px rgb(255, 166, 0);
+  box-shadow: 0 0 10px 3px #ff8500;
   border-radius: 0.5rem;
   transition: box-shadow 0.3s ease;
 }
@@ -402,6 +397,10 @@ img.selectedPartnerLogo {
   }
   input {
     width: 23rem;
+  }
+  .logos img {
+    width: 70px;
+    height: 70px;
   }
 }
 
