--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -310,7 +310,7 @@ input {
   flex-direction: column;
   margin-top: 3rem;
   margin-bottom: 3rem;
-  width: 80%;
+  width: 50%;
   align-items: center;
   justify-content: center;
   /* gap: 2rem; */
@@ -325,7 +325,7 @@ input {
   margin-bottom: 1rem;
 }
 
-.logos {
+/* .logos {
   display: flex;
   column-gap: 1rem;
   row-gap: 2rem;
@@ -337,9 +337,34 @@ input {
 
 .logos img {
   width: 5rem;
-  box-shadow: 0px 4px 6.3px 1px #4c65b885;
+  box-shadow: 0px 4px 8px 1px #4c65b885;
   border-radius: 15px;
   padding: 0.2rem;
+  cursor: pointer;
+} */
+
+.logos {
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: auto;
+  gap: 1rem;
+  padding: 1rem 0;
+  width: 100%;
+  scrollbar-width: none;
+  touch-action: pan-x;
+}
+
+.logos::-webkit-scrollbar {
+  display: none;
+}
+
+.logos img {
+  flex: 0 0 calc(100% / 3.8);
+  height: 100px;
+  object-fit: contain;
+  box-shadow: 0px 4px 8px 1px #4c65b885;
+  border-radius: 15px;
+  transition: transform 0.3s ease;
   cursor: pointer;
 }
 
@@ -401,6 +426,9 @@ img.selectedPartnerLogo {
   .logos img {
     width: 70px;
     height: 70px;
+  }
+  .partnersContainer {
+    width: 70%;
   }
 }
 
