--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -313,7 +313,6 @@ input {
   width: 50%;
   align-items: center;
   justify-content: center;
-  /* gap: 2rem; */
   background-color: white;
   padding: 1rem;
   border-radius: 1rem;
@@ -323,25 +322,8 @@ input {
 .partnersContainer h2 {
   font-weight: 500;
   margin-bottom: 1rem;
+  font-size: 2rem;
 }
-
-/* .logos {
-  display: flex;
-  column-gap: 1rem;
-  row-gap: 2rem;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.logos img {
-  width: 5rem;
-  box-shadow: 0px 4px 8px 1px #4c65b885;
-  border-radius: 15px;
-  padding: 0.2rem;
-  cursor: pointer;
-} */
 
 .logos {
   display: flex;
@@ -424,11 +406,11 @@ img.selectedPartnerLogo {
     width: 23rem;
   }
   .logos img {
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
   }
   .partnersContainer {
-    width: 70%;
+    width: 80%;
   }
 }
 
