--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -310,11 +310,11 @@ input {
   flex-direction: column;
   margin-top: 3rem;
   margin-bottom: 3rem;
-  width: 50%;
+  width: 70%;
   align-items: center;
   justify-content: center;
   background-color: white;
-  padding: 1rem;
+  padding: 1rem 0;
   border-radius: 1rem;
   box-shadow: 0 15px 8px rgba(0, 0, 0, 0.2);
 }
@@ -323,6 +323,11 @@ input {
   font-weight: 500;
   margin-bottom: 1rem;
   font-size: 2rem;
+}
+
+.partnersContainer h3 {
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
 .logos {
@@ -344,7 +349,8 @@ input {
   flex: 0 0 calc(100% / 3.8);
   height: 100px;
   object-fit: contain;
-  box-shadow: 0px 4px 8px 1px #4c65b885;
+  box-shadow: 0px 6px 5px 1px #4c65b885;
+  border: 1px solid #4c65b885;
   border-radius: 15px;
   transition: transform 0.3s ease;
   cursor: pointer;
@@ -410,7 +416,7 @@ img.selectedPartnerLogo {
     height: 80px;
   }
   .partnersContainer {
-    width: 80%;
+    width: 90%;
   }
 }
 
