--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -310,7 +310,7 @@ input {
   flex-direction: column;
   margin-top: 3rem;
   margin-bottom: 3rem;
-  width: 70%;
+  width: 50%;
   align-items: center;
   justify-content: center;
   background-color: white;
@@ -348,7 +348,8 @@ input {
 .logos img {
   flex: 0 0 calc(100% / 3.8);
   height: 100px;
-  object-fit: contain;
+  object-fit: cover;
+  padding: 1rem;
   box-shadow: 0px 6px 5px 1px #4c65b885;
   border: 1px solid #4c65b885;
   border-radius: 15px;
@@ -414,6 +415,7 @@ img.selectedPartnerLogo {
   .logos img {
     width: 80px;
     height: 80px;
+    padding: 2px;
   }
   .partnersContainer {
     width: 90%;
