--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -201,7 +201,6 @@ input {
   color: white;
   border-radius: 1rem;
   padding: 0.4rem 1rem;
-  /* transition: font-size 0.2s ease; */
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
@@ -308,12 +307,13 @@ input {
 .partnersContainer {
   display: flex;
   flex-direction: column;
+  color: white;
   margin-top: 3rem;
   margin-bottom: 3rem;
   width: 50%;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  background-color: rgba(1, 81, 156, 0.1);
   padding: 1rem 0;
   border-radius: 1rem;
   box-shadow: 0 15px 8px rgba(0, 0, 0, 0.2);
@@ -346,10 +346,10 @@ input {
 }
 
 .logos img {
-  flex: 0 0 calc(100% / 3.8);
+  flex: 0 0 calc(90% / 3.8);
   height: 100px;
   object-fit: cover;
-  padding: 1rem;
+  padding: 2px;
   box-shadow: 0px 6px 5px 1px #4c65b885;
   border: 1px solid #4c65b885;
   border-radius: 15px;
