--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,6 @@ body {
 
 #root,
 #scroll-container {
-  /* min-height: 100vh; */
   overflow-y: auto;
   width: 100%;
   text-align: center;
@@ -70,10 +69,9 @@ h2 {
   position: relative;
 }
 
-/* clear button */
-
 .searchBar button {
   position: absolute;
+  width: 2rem;
   left: 3rem;
   top: 4rem;
   font-family: "Rubik";
@@ -82,6 +80,7 @@ h2 {
   font-size: 1rem;
   color: black;
   border: none;
+  cursor: pointer;
 }
 
 .searchBar button img {
@@ -118,39 +117,12 @@ input {
 
 .soldierCard {
   width: 100%;
-  position: relative;
   margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   box-shadow: 0px 4px 7.7px 3px #00000040;
   border-radius: 1rem;
   background-color: white;
-}
-
-.cardOverlay {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  top: 0;
-  left: 0;
-  background-color: rgba(255, 255, 255, 0.7);
-  border-radius: 1rem;
-  border: none;
-}
-
-.cardOverlay p {
-  font-size: 3rem;
-  font-weight: 500;
-}
-
-.cardOverlay img {
-  width: 7rem;
-  margin-top: 2rem;
 }
 
 .postHeader {
@@ -273,7 +245,6 @@ input {
 
 .howItStartedContainer {
   width: 80%;
-  /* background-color: rgb(212, 212, 212); */
   background-color: rgba(255, 255, 255, 0.01);
   color: white;
   display: flex;
@@ -284,7 +255,6 @@ input {
   gap: 3rem;
   border-radius: 1rem;
   overflow: visible;
-  /* box-shadow: 0 5px 8px 10px rgba(0, 0, 0, 0.2); */
   box-shadow: 0px 4px 9px 5px rgba(0, 0, 0, 0.2);
 }
 
@@ -294,9 +264,8 @@ input {
 }
 
 .contentSection h2 {
-  /* color: #342dff; */
-  color: #ff8500;
-  font-weight: 500;
+  color: rgba(255, 166, 0);
+  font-weight: 600;
   font-size: 1.5rem;
 }
 
@@ -400,29 +369,30 @@ input {
   background-color: transparent;
   color: rgb(255, 255, 255);
   border: none;
+  cursor: pointer;
 }
 
 .enlargeButton {
-  width: 2rem;
+  width: 5rem;
+  cursor: pointer;
 }
 
 .enlargeButton img {
   width: 100%;
   box-shadow: none;
-  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 50%;
-  padding: 0.2rem;
+  object-fit: contain;
 }
 
 .image.right button {
   position: absolute;
-  left: 4rem;
-  top: 1rem;
+  left: 2rem;
+  top: 0rem;
 }
 
 #whatIs {
-  top: 14.5rem;
-  left: 3.5rem;
+  top: 13rem;
+  left: 1.5rem;
 }
 
 .image.left button {
@@ -430,18 +400,18 @@ input {
 }
 
 #leftPrimary {
-  top: 1rem;
-  right: 1rem;
+  top: -0.5rem;
+  right: -1rem;
 }
 
 #leftSecondery {
-  top: 16.5rem;
-  right: 1.5rem;
+  top: 15rem;
+  right: -1rem;
 }
 
 #rightSecondery {
-  top: 21rem;
-  left: 1.9rem;
+  top: 20rem;
+  left: -0.5rem;
   z-index: 1000;
 }
 
@@ -548,7 +518,7 @@ input {
   margin-bottom: 2rem;
   font-size: 3rem;
   font-weight: 500;
-  color: #ff8500;
+  color: rgb(255, 166, 0);
 }
 
 .partnerCard p {
