--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -512,6 +512,9 @@ input {
 
 .partnerCard {
   margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .partnerCard h3 {
@@ -616,6 +619,12 @@ img.selectedPartnerLogo {
   .partnersContainer {
     width: 90%;
     min-height: 230px;
+  }
+  .partnerCard h3 {
+    font-size: 2rem;
+  }
+  .partnerCard p {
+    width: 80%;
   }
   .howItStartedContainer {
     font-size: 1rem;
